Add new file about us

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <ul class="nav-list">
                         <li class="nav-list-item"><a class="nav-link" href="./index.html">HOME</a></li>
                         <li class="nav-list-item"><a class="nav-link" href="#">ABOUT US</a></li>
-                        <li class="nav-list-item "><a class="nav-link nav-link-last " href="#">Create your plan</a></li>
+                        <li class="nav-list-item"><a class="nav-link nav-link-last " href="#">Create your plan</a></li>
                     </ul>
                 </div>
             </div>
@@ -192,14 +192,33 @@
                         <a href="./index.html"><img src="./images/img.svg" width="235" height="24" alt="coffearpaster logo"></a>
                         
                         <ul class="nav-list">
-                            <li class="nav-list-item"><a class="nav-link footer" href="./index.html">HOME</a></li>
-                            <li class="nav-list-item"><a class="nav-link footer" href="#">ABOUT US</a></li>
-                            <li class="nav-list-item"><a class="nav-link nav-link-last footer" href="#">Create your plan</a></li>
+                            <li class="nav-list-item">
+                                <a class="nav-link footer" href="./index.html">HOME</a>
+                            </li>
+                            <li class="nav-list-item">
+                                <a class="nav-link footer" href="#">ABOUT US</a>
+                            </li>
+                            <li class="nav-list-item">
+                                <a class="nav-link nav-link-last footer" href="#">Create your plan</a>
+                            </li>
                         </ul>
                         <ul class="footer-social">
-                            <li class="footer-social-item"><a href="#"><img src="./images/facebook.svg" width="30" height="30" alt="facebook logo"></a></li>
-                            <li class="footer-social-item"><a href="#"><img src="./images/twitter.svg" width="30" height="25" alt="twiiter logo"></a></li>
-                            <li class="footer-social-item"><a href="#"><img src="./images/instagram.svg" width="30" height="30" alt="instagram logo"></a></li>
+                            <li class="footer-social-item">
+                                <a href="https://facebook.com/" target="blank">
+                                    <img src="./images/facebook.svg" width="30" height="30" alt="facebook logo">
+                                </a>
+                            </li>
+                            <li class="footer-social-item">
+                                <a href="https://twitter.com/" target="blank">
+                                    <img src="./images/twitter.svg" width="30" height="25" alt="twiiter-logo" >
+                                </a>
+                            </li>
+                            <li class="footer-social-item">
+                                <a href="https://instagram.com/" target="blank">
+                                    <img src="./images/instagram.svg" width="30" height="30" 
+                                    alt="instagram logo"  >
+                                </a>
+                            </li>
                         </ul>
                     </div>
                 </div>
