Add connect file

--- a/about.html
+++ b/about.html
@@ -28,7 +28,7 @@
                             </a>
                         </li>
                         <li class="header-item">
-                            <a  class="header-link" href="./about-us.html">
+                            <a  class="header-link" href="./about.html">
                                 ABOUT US
                             </a>
                         </li>
