--- a/about.html
+++ b/about.html
@@ -178,7 +178,7 @@
                             </a>
                         </li>
                         <li class="footernav-item">
-                            <a  class="footernav-link" href="./about-us.html">
+                            <a  class="footernav-link" href="./about.html">
                                 ABOUT US
                             </a>
                         </li>
