--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     alt="coffearoaster logo"></a>
                     <ul class="nav-list">
                         <li class="nav-list-item"><a class="nav-link" href="./index.html">HOME</a></li>
-                        <li class="nav-list-item"><a class="nav-link" href="#">ABOUT US</a></li>
+                        <li class="nav-list-item"><a class="nav-link" href="./about.html">ABOUT US</a></li>
                         <li class="nav-list-item"><a class="nav-link nav-link-last " href="#">Create your plan</a></li>
                     </ul>
                 </div>
@@ -196,7 +196,7 @@
                                 <a class="nav-link footer" href="./index.html">HOME</a>
                             </li>
                             <li class="nav-list-item">
-                                <a class="nav-link footer" href="#">ABOUT US</a>
+                                <a class="nav-link footer" href="./about.html">ABOUT US</a>
                             </li>
                             <li class="nav-list-item">
                                 <a class="nav-link nav-link-last footer" href="#">Create your plan</a>
